--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="logo512.png" sizes="512x512" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="favicon.ico"
+      sizes="16x16 32x32"
+    />
+    <link rel="icon" type="image/png" href="logo192.png" sizes="192x192" />
+    <link rel="icon" type="image/png" href="logo512.png" sizes="512x512" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
