--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="favicon.ico"
-      sizes="16x16 32x32"
-    />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" sizes="32x32" />
     <link rel="icon" type="image/png" href="logo192.png" sizes="192x192" />
     <link rel="icon" type="image/png" href="logo512.png" sizes="512x512" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
