--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" sizes="32x32" />
+    <link rel="icon" href="favicon.ico" sizes="32x32" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
-    <link rel="apple-touch-icon" href="./logo192.png" sizes="192x192" />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="logo192.png" sizes="192x192" />
+    <link rel="manifest" href="manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Yen Table</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/sw.js", { scope: "/" }).then(() => {
+          console.log("Service Worker Registered");
+        });
+        navigator.serviceWorker.ready.then(() =>
+          console.log("Service Worker Ready")
+        );
+      }
+    </script>
     <div id="root"></div>
   </body>
 </html>
