--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" type="icon-x" sizes="32x32" />
+    <link
+      rel="icon"
+      href="./favicon.ico"
+      type="icon-x"
+      sizes="16x16 32x32 48x48"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
