--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="./favicon.ico"
-      type="icon-x"
-      sizes="16x16 32x32 48x48"
-    />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" href="./favicon.ico" type="image/icon-x" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
-    <link
-      rel="apple-touch-icon"
-      href="./192.png"
-      type="image/png"
-      sizes="192x192"
-    />
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="apple-touch-icon" href="./192.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Yen Table</title>
