--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
-    <link rel="apple-touch-icon" href="./192.png" type="image/png" />
+    <link rel="apple-touch-icon" href="./images/192.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Yen Table</title>
