--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="manifest" href="./manifest.json" />
-    <link rel="icon" href="./images/512.png" type="image/png" sizes="512x512" />
+    <link rel="icon" href="./images/512.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
