--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="manifest" href="./manifest.json" />
-    <link rel="icon" href="./images/512.png" type="image/png" />
+    <link rel="icon" href="./images/512.png" type="image/png" sizes="512x512" />
+    <link rel="icon" href="./images/384.png" type="image/png" sizes="384x384" />
+    <link rel="icon" href="./images/192.png" type="image/png" sizes="192x192" />
+    <link rel="icon" href="./images/128.png" type="image/png" sizes="128x128" />
+    <link rel="icon" href="./images/92.png" type="image/png" sizes="92x92" />
+    <link rel="icon" href="./images/72.png" type="image/png" sizes="72x72" />
+    <link rel="icon" href="./images/48.png" type="image/png" sizes="48x48" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="rgb(30, 35, 50)" />
     <meta name="description" content="A table of yen conversions." />
