--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./images/logo.svg" type="image/svg+xml" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="rgb(255, 255, 255)" />
+    <meta name="theme-color" content="white" />
     <meta name="description" content="A table of yen conversions." />
     <link rel="apple-touch-icon" href="./images/192.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
